tests/NormalTests/paczka1/fuzzy1/63270271.err
Error in line 3: fY1jqIG59X S368 39,7
Error in line 8: fY1jqIG59X A949 39,0
Error in line 15: I2Lr8Ry32D A199 77,9
Error in line 20: S368 S368 72,1
Error in line 22: ubidRyxdIJc A199 34,5
Error in line 25: ubidRyxdIJc S368 12,7
Error in line 31: ubidRyxdIJc A949 81,1
Error in line 32: OSuesfKT S368 2,1
